<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
  <shortcut
    android:shortcutId="users"
    android:enabled="true"
    android:icon="@drawable/ic_shortcut_github"
    android:shortcutShortLabel="@string/shortcut_users_short_label"
    android:shortcutLongLabel="@string/shortcut_users_long_label"
    android:shortcutDisabledMessage="@string/shortcut_users_disabled_message">
    <intent
      android:action="android.intent.action.VIEW"
      android:data="clientgithubjraskacom://github.com/users"/>
    <categories android:name="android.shortcut.conversation" />
  </shortcut>
  <shortcut
    android:shortcutId="users/jraska"
    android:enabled="true"
    android:icon="@drawable/ic_shortcut_watchers"
    android:shortcutShortLabel="@string/shortcut_jraska_short_label"
    android:shortcutLongLabel="@string/shortcut_jraska_long_label"
    android:shortcutDisabledMessage="@string/shortcut_jraska_disabled_message">
    <intent
      android:action="android.intent.action.VIEW"
      android:data="clientgithubjraskacom://github.com/jraska"/>
    <categories android:name="android.shortcut.conversation" />
  </shortcut>
  <shortcut
    android:shortcutId="users/JakeWharton"
    android:enabled="true"
    android:icon="@drawable/ic_shortcut_admin"
    android:shortcutShortLabel="@string/shortcut_jake_short_label"
    android:shortcutLongLabel="@string/shortcut_jake_long_label"
    android:shortcutDisabledMessage="@string/shortcut_jake_disabled_message">
    <intent
      android:action="android.intent.action.VIEW"
      android:data="clientgithubjraskacom://github.com/JakeWharton"/>
    <categories android:name="android.shortcut.conversation" />
  </shortcut>
</shortcuts>


